# everything-jet-plugin

./: .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  THIRD_PARTY_NOTICES.md
.github/workflows/: ci.yml  release.yml
src/: actions.cpp  actions.hpp  content_search.cpp  content_search.hpp  everything_wrapper.cpp  everything_wrapper.hpp  file_hashing.cpp  file_hashing.hpp  file_preview.cpp  file_preview.hpp  json.hpp  main.cpp  mcp_server.cpp  mcp_server.hpp  smart_query.cpp  smart_query.hpp  string_utils.hpp
tests/: ipc_test.cpp  test_actions.cpp  test_content_search.cpp  test_everything.cpp  test_file_hashing.cpp  test_file_preview.cpp  test_framework.hpp  test_json.cpp  test_main.cpp  test_mcp_server.cpp  test_smart_query.cpp  test_string_utils.cpp
